# Space_Invaders-CPP-revision

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  run.sh
include/: constant.h  space_invader.h
lib/: libgmock.so.1.12.1  libgtest.so.1.12.1
src/: main.cpp  space_invader.cpp
